--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,44 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="bg-gray-100">
+    <nav class="bg-white shadow">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between h-16">
+          <div class="flex-shrink-0 flex items-center">
+            <%= link_to image_tag('logo2.png', alt: 'Mon logo', class: 'h-8'), root_path, class: 'text-gray-800 font-semibold text-xl' %>
+          </div>
+          <div class="flex">
+            <% if current_user && current_user.admin %>
+            <div class="hidden sm:ml-6 sm:flex sm:items-center">
+              <%= link_to "Requêter l'API", new_siren_form_path, class: 'text-gray-800 hover:bg-gray-200 px-3 py-2 rounded-md text-sm font-medium' %>
+            </div>
+            <% end %>
+            <div class="hidden sm:ml-6 sm:flex sm:items-center">
+              <% if current_user %>
+              <%= button_to "Déconnexion", destroy_user_session_path, method: :delete, class: 'text-gray-800 hover:bg-gray-200 px-3 py-2 rounded-md text-sm font-medium' %>
+
+              <% else %>
+              <%= button_to "Connexion", new_user_session_path, class: 'text-gray-800 hover:bg-gray-200 px-3 py-2 rounded-md text-sm font-medium' %>
+
+              <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main class= "">
+      <%= render "layouts/alerts" %>
+      <%= yield %>
+    </main>
   </body>
 </html>
+
+
